# tree-sitter-corel

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  install.sh  log.html  package-lock.json  package.json  pyproject.toml  recipe.corel  setup.py  testfile  tree-sitter.json
bindings/c/: tree-sitter-corel.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_corel/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterCorel/: corel.h
bindings/swift/TreeSitterCorelTests/: TreeSitterCorelTests.swift
old-tests/: range.txt
src/: grammar.json  highlights.scm  node-types.json  parser.c
test/corpus/: exact_value.txt  fraction.txt  natural_number.txt  range.txt  recipe.txt
